<resources>
    <string name="app_name">Poona AgroCart</string>
    <string name="toast_message">Toast</string>
    <string name="font_poppins_bold">fonts/poppins/poppins_bold.ttf</string>
    <string name="font_poppins_medium">fonts/poppins/poppins_medium.ttf</string>
    <string name="font_poppins_regular">fonts/poppins/poppins_regular.ttf</string>
    <string name="font_poppins_semi_bold">fonts/poppins/poppins_semi_bold.ttf</string>
    <string name="font_montserrat_regular">fonts/montserrat/</string>
    <string name="info">Information</string>
    <string name="internet_error_message">Cannot connect to Internet. Check your Internet connection.</string>
    <string name="no_more_records">No more new records, you are reached to end of the list</string>
    <string name="retry">Retry</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="do_you_really_want_to_logout">Do you really want to sign out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="update">Update</string>
    <string name="update_address">Update Address</string>
    <string name="update_downloaded">Successfully updated Fresh Cut Vendor App!</string>
    <string name="restart">Restart</string>
    <string name="address_filled_screen">Please Filed the Address </string>
    <string name="ensure_your_all_permissions">Ensure all your permissions</string>
    <string name="select_file">Select file</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="str_get_started">Get Started</string>
    <string name="str_next">Next</string>
    <string name="get_ur_groceries">Get your groceries \nwith Poona Agrocart</string>
    <string name="fast_fresh_healthy"><![CDATA[Fast, Fresh & \nHealthy…]]></string>
    <string name="privacy_policy_terms_n_conditions">By continuing you agree to our Terms of Service and Privacy Policy</string>
    <string name="select_location">Select Your Location</string>
    <string name="switch_on_location">Switch on your location to stay in tune with \n what’s happening in your area</string>
    <string name="your_city">Your City</string>
    <string name="your_area">Your Area</string>
    <string name="submit">Submit</string>
    <string name="please_select_state">Please select state!</string>
    <string name="please_select_city">Please select city!</string>
    <string name="please_select_area">Please select area!</string>
    <string name="please_select_gender">Please select gender!</string>
    <string name="please_select_dob">Please select date of birth!</string>
    <string name="loging">Loging</string>
    <string name="enter_your_email_and_password">Enter your mobile number and password</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="empty_username">Please enter username</string>
    <string name="password_should_not_be_empty">Password should not be empty!</string>
    <string name="forgot_password_without_quesmark">Forgot Password</string>
    <string name="enter_your_phone_number_for_otp_text">Enter your phone number for verification we\nwill send 4 digit code to your mobile number.</string>
    <string name="phone_number">Phone Number</string>
    <string name="continue_text">Continue</string>
    <string name="message_txt">Please text a message..</string>
    <string name="back_to">Back to</string>
    <string name="log_in">Log In?</string>
    <string name="email_id_should_not_be_empty">Email Id should not be empty!</string>
    <string name="mobile_number_should_not_be_empty">Mobile Number should not be empty!</string>
    <string name="enter_valid_mobile_number">Please enter valid mobile number!</string>
    <string name="please_select_country_code">Please select country code!</string>
    <string name="select_country">Select country</string>
    <string name="digits">0123456789</string>
    <string name="name_should_not_be_empty">Name should not be empty!</string>
    <string name="address_type_should_not_be_empty">Address Type should not be empty!</string>
    <string name="pin_code_should_not_be_empty">Pincode should not be empty!</string>
    <string name="invalid_pin_code">Please enter valid pincode!</string>
    <string name="apartment_name_should_not_be_empty">Apartment Name should not be empty!</string>
    <string name="number_should_not_be_empty">House Number should not be empty!</string>
    <string name="landmark_should_not_be_empty">Landmark should not be empty!</string>
    <string name="street_should_not_be_empty">Street should not be empty!</string>
    <string name="enter_otp">Enter your 4-digit code</string>
    <string name="otp_sent">We have sent OTP code via SMS to </string>
    <string name="resend_code">Resend Code</string>
    <string name="verify_otp_btn">Verify OTP</string>
    <string name="otp_should_not_be_empty">OTP should not be empty!</string>
    <string name="please_enter_valid_otp">Please enter valid OTP!</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_credentials">Enter your credentials to continue</string>
    <string name="username">Username</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="email_id_optional">Email Id (optional)</string>
    <string name="sign_up_btn_text">Sign Up</string>
    <string name="by_continuing_you_agree">By continuing you agree to our Terms of Service and Our Policies</string>
    <string name="menu_our_policy">Our Policies</string>
    <string name="username_should_not_be_empty">Username should not be empty!</string>
    <string name="please_enter_valid_email_id">Please enter valid Email ID!</string>
    <string name="address_location">Address, Location</string>
    <string name="user">Hello! User</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_settings">Settings</string>
    <string name="all_letters_and_digits">abcdefghijklmnopqrstuvwxyz</string>
    <string name="business">Business</string>
    <string name="individual">Individual</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_explore">Explore</string>
    <string name="menu_account">Account</string>
    <string name="menu_favourite">Favourite</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_my_profile">My Profile</string>
    <string name="menu_my_orders">My Orders</string>
    <string name="menu_addresses">Addresses</string>
    <string name="menu_my_basket_subs">My Basket Subscription</string>
    <string name="menu_wallet_payments"><![CDATA[Wallet & Payments]]></string>
    <string name="menu_offer_coupons"><![CDATA[Offers & Coupons]]></string>
    <string name="menu_notification">Notifications</string>
    <string name="menu_about_us">About us</string>
    <string name="menu_help_center">Help Center</string>
    <string name="menu_terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="menu_our_store">Our Store</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="menu_shop">Shop</string>
    <string name="shop_by_category">Shop by Category</string>
    <string name="see_all">See all</string>
    <string name="best_selling">Best Selling</string>
    <string name="exclusive_offer">Exclusive Offers</string>
    <string name="basket">Basket</string>
    <string name="baskets">Baskets</string>
    <string name="_10_off">10% Off</string>
    <string name="one_kg">1Kg</string>
    <string name="rs">Rs25</string>
    <string name="no_category">No category available</string>
    <string name="no_best_selling">No Best Selling available</string>
    <string name="no_offer">No Offer available</string>
    <string name="no_our_store">No Store available</string>
    <string name="no_seasonal">No Seasonal Offer available</string>
    <string name="no_products">No Products available</string>
    <string name="name">Name</string>
    <string name="alternate_mobile_no">Alternate Mobile No.</string>
    <string name="email_id">Email Id</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="area">Area</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="save">Save</string>
    <string name="home">Home</string>
    <string name="office">Office</string>
    <string name="mobile">Mobile</string>
    <string name="pin_code">Pincode</string>
    <string name="check_availability">Check Availability</string>
    <string name="detailed_address">Detailed Address</string>
    <string name="house_number">House Number</string>
    <string name="apartment_name">Apartment Name</string>
    <string name="street">Street</string>
    <string name="landmark">Landmark</string>
    <string name="or">OR</string>
    <string name="use_current_location">Use Current Location</string>
    <string name="chosen_address_from_map">Your chosen address from google map</string>
    <string name="add_address">Add Address</string>
    <string name="addresses_form">Addresses Form</string>
    <string name="date_sep_30_2021_20_15_am">Sep 30, 2021 20:15 AM</string>
    <string name="coupons">Coupons</string>
    <string name="about_str">Massa odio turpis diam dui porta turpis. Fermentum dignissim proin in nisl. Sit amet aliquam ullamcorper sed aliquam volutpat. Suscipit sem ullamcor \n\n\nper praesent fusce arcu placerat mi purus felis. Purus viverra ipsum tempor morbi tincidunt ullamcorper. Varius nisi facilisis ultrices neque lacinia aliquet aenean at. Eros id quam facilisi dolor. Viverra felis vivamus et eget tempus.\n\n Risus eu hac sed elit velit accumsan. Tempor, ullamcorper nisi fermentum ipsum. Amet, lacinia tincidunt facilisis eget fringilla sed. Turpis dictumst ridiculus velit at sodales. Ornare enim tempus hendrerit.Turpis dictumst ridiculus velit at sodales. Ornare enim tempus hendrerit . ridiculus velit at sodales. Ornare enim tempus hendrerit\n\n<b>2. Testmonial Review</b>\n\nVarius nisi facilisis ultrices neque lacinia aliquet aenean at. Eros id quam facilisi dolor. Viverra felis vivamus et eget tempus.\n\n<b>3. Our working Process</b>\n\nper praesent fusce arcu placerat mi purus felis. Purus viverra ipsum tempor morbi tincidunt ullamcorper. Varius nisi facilisis ultrices neque lacinia aliquet aenean
    at. Eros id quam facilisi dolor. Viverra felis vivamus et eget tempus.</string>
    <string name="app_notification">App Notification</string>
    <string name="enable_app">Enable or disable the notifications coming up.</string>
    <string name="email_notifications">Email Notification</string>
    <string name="enable_notification">Enable or disable the Email notifications.</string>
    <string name="app_version_1_0_12">App Version - </string>
    <string name="oops_no_products">Oops! There are no products added.</string>
    <string name="please_add_product">Please add at least one product.</string>
    <string name="continue_shopping">Continue Shopping</string>
</resources>