<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:orientation="vertical">

                    <com.poona.agrocart.widgets.CustomTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/app_notification"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_16sp"
                        app:setCustomFont="@string/font_poppins_semi_bold" />

                    <com.poona.agrocart.widgets.CustomTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/enable_app"
                        android:textColor="@color/color_setting_description"
                        android:textSize="@dimen/_12sp"
                        app:setCustomFont="@string/font_poppins_regular" />

                </LinearLayout>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/sc_notification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.7"
                    android:checked="true"
                    android:theme="@style/Color1SwitchStyle"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:orientation="vertical">

                    <com.poona.agrocart.widgets.CustomTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/email_notifications"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_16sp"
                        app:setCustomFont="@string/font_poppins_semi_bold" />

                    <com.poona.agrocart.widgets.CustomTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/enable_notification"
                        android:textColor="@color/color_setting_description"
                        android:textSize="@dimen/_12sp"
                        app:setCustomFont="@string/font_poppins_regular" />

                </LinearLayout>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/sc_email_notification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.7"
                    android:checked="false"
                    android:theme="@style/Color1SwitchStyle"/>

            </LinearLayout>

            <com.poona.agrocart.widgets.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_version_1_0_12"
                android:textColor="@color/black"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:textSize="@dimen/_16sp"
                app:setCustomFont="@string/font_poppins_semi_bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_12sdp"
                android:background="@color/color_setting_horizontal_line" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>