<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="commonViewModel"
            type="com.poona.agrocart.ui.login.CommonViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_poona_agro_main_logo"
                android:layout_width="@dimen/_140sdp"
                android:layout_height="@dimen/_140sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_40sdp"
                android:src="@drawable/ic_poona_agro_cart_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/img_main_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.2"
                android:background="@drawable/img_agro_main_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.poona.agrocart.widgets.CustomTextView
            android:id="@+id/customTextView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_250sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:padding="@dimen/alerter_padding_small"
            android:text="@string/forgot_password_without_quesmark"
            android:textColor="@color/clr_enter_otp"
            android:textSize="@dimen/_24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:setCustomFont="@string/font_poppins_bold" />

        <com.poona.agrocart.widgets.CustomTextView
            android:id="@+id/customTextView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:padding="@dimen/alerter_padding_small"
            android:text="@string/enter_your_phone_number_for_otp_text"
            android:textColor="@color/color17"
            android:textSize="@dimen/_14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/customTextView2"
            app:setCustomFont="@string/font_poppins_regular" />

        <com.poona.agrocart.widgets.CustomTextView
            android:id="@+id/customTextView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:padding="@dimen/alerter_padding_small"
            android:text="@string/phone_number"
            android:textColor="@color/color14"
            android:textSize="@dimen/_16sp"
            android:textStyle="bold"
            android:layout_marginEnd="@dimen/_20sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/customTextView4"
            app:setCustomFont="@string/font_poppins_bold" />

        <com.poona.agrocart.widgets.CustomEditText
            android:id="@+id/et_mobile_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_login_et_fields"
            android:padding="@dimen/_2sdp"
            android:textSize="@dimen/_16sp"
            android:inputType="number"
            android:maxLength="10"
            app:layout_constraintTop_toBottomOf="@+id/customTextView6"
            app:setCustomFont="@string/font_poppins_semi_bold"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"/>

        <com.poona.agrocart.widgets.CustomButton
            android:id="@+id/btn_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_verify_otp_btn"
            android:padding="@dimen/alerter_padding_small"
            android:text="@string/continue_text"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:textColor="@color/background_button_selector_green"
            android:textSize="@dimen/_16sp"
            app:layout_constraintTop_toBottomOf="@+id/et_mobile_number"
            app:setCustomFont="@string/font_poppins_regular"
            tools:layout_editor_absoluteX="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@+id/btn_continue"
            android:gravity="center"
            android:layout_height="wrap_content"
            >
            <com.poona.agrocart.widgets.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/alerter_padding_small"
                android:text="@string/back_to"
                android:textColor="@color/clr_enter_otp"
                android:textSize="@dimen/_14sp"
                app:setCustomFont="@string/font_poppins_regular"/>

            <com.poona.agrocart.widgets.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/alerter_padding_small"
                android:text="@string/log_in"
                android:id="@+id/tv_log_in"
                android:textColor="@color/color9"
                android:textSize="@dimen/_14sp"
                app:setCustomFont="@string/font_poppins_semi_bold" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>