<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context=".ui.nav_about_us.AboutUsFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginHorizontal="@dimen/horizontal_margin"
            android:orientation="vertical">
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:elevation="@dimen/_20sdp"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardUseCompatPadding="true"
                app:strokeColor="@color/colorLightGrey"
                app:strokeWidth="1dp">
                <LinearLayout
                    android:padding="@dimen/_10sdp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_poona_agro_cart_logo" />

                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>

            <com.poona.agrocart.widgets.CustomTextView
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_about_us"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sp"
                android:textStyle="bold"
                app:setCustomFont="@string/font_poppins_semi_bold" />

            <View
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="3dp"
                android:background="@color/colorLightGrey" />

            <com.poona.agrocart.widgets.CustomTextView
                android:paddingStart="@dimen/_5sdp"
                android:paddingEnd="0dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:lineSpacingExtra="@dimen/_2sdp"
                android:text="@string/about_str"
                android:textColor="@color/about_txt_color"
                android:textSize="@dimen/medium_txt_size"
                android:textStyle="normal"
                app:setCustomFont="@string/font_poppins_medium" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>